force-app/main/default/objects/Product2/fields/Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Price__c</fullName>
    <label>Annual Price</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>