force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HCM</fullName><default>false</default><label>HCM</label></value>
            <value><fullName>Workforce Management</fullName><default>false</default><label>Workforce Management</label></value>
            <value><fullName>Employee Experience</fullName><default>false</default><label>Employee Experience</label></value>
            <value><fullName>Financial Wellness</fullName><default>false</default><label>Financial Wellness</label></value>
            <value><fullName>HR Operations</fullName><default>false</default><label>HR Operations</label></value>
            <value><fullName>Analytics</fullName><default>false</default><label>Analytics</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>