force-app/main/default/objects/Product2/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Semicolon-separated feature list (e.g., Core HR;Payroll Processing;Talent Management)</description>
</CustomField>