force-app/main/default/objects/Product2/fields/Min_Employees__c.field-meta.xml
<CustomField>
    <fullName>Min_Employees__c</fullName>
    <label>Minimum Employees</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>