force-app/main/default/objects/Product2/fields/Monthly_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Price__c</fullName>
    <label>Monthly Price</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>