force-app/main/default/objects/Product2/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Comma-separated tags for product matching (e.g., enterprise,payroll,hr,talent)</description>
</CustomField>