force-app/main/default/objects/Product2/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Enterprise</fullName><default>false</default><label>Enterprise</label></value>
            <value><fullName>Mid-Market</fullName><default>false</default><label>Mid-Market</label></value>
            <value><fullName>Add-On</fullName><default>false</default><label>Add-On</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>